# nvdialog

./: .SRCINFO  .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  Makefile  PKGBUILD  README.md  ROADMAP.md  SECURITY.md  TODO.md  compile_flags.txt
.cache/clangd/index/: nvdialog_adw.c.B07953F0310FE05E.idx  nvdialog_fallback.c.1C67926998A78CF1.idx  nvdialog_main.c.017268BF39CBC73C.idx
.github/ISSUE_TEMPLATE/: bug-report.md  feature-suggestion.md
.github/workflows/: adw-backend.yml  ci.yml  clang-format-check.yml  cmake.yml  codeql.yml  generic-ci.yml  i686-pc-windows-msvc.yml  macos.yml  macosx.yml  ubuntu-22.04.yml  ubuntu.yml  win32-ci.yml  x86_64-apple-darwin.yml  x86_64-pc-linux-gnu.yml
assets/: README.txt
examples/about-dialog/: CMakeLists.txt  Makefile  about-dialog-example  about-dialog.c  about_dialog.c
examples/dialog-with-image/: CMakeLists.txt  dialog-with-image.c
examples/file-dialog/: CMakeLists.txt  Makefile  file-dialog.c  file_dialog.c
examples/hello-world/: CMakeLists.txt  Makefile  gtk-test  gtk.c  hello-world  hello-world.c  hello_world.c
examples/input-box/: CMakeLists.txt  input_box.c
examples/notification/: CMakeLists.txt  notification.c
examples/question-dialog/: CMakeLists.txt  Makefile  question-dialog.c  question-example  question_dialog.c
include/: nvdialog.h  nvdialog_build.h  nvdialog_capab.h  nvdialog_core.h  nvdialog_css_manager.h  nvdialog_dialog.h  nvdialog_error.h  nvdialog_image.h  nvdialog_notification.h  nvdialog_platform.h  nvdialog_string.h  nvdialog_tutorial.h  nvdialog_types.h  nvdialog_widestr.h
include/dialogs/: nvdialog_about_dialog.h  nvdialog_dialog_box.h  nvdialog_file_dialog.h  nvdialog_input_box.h
nvd-demo/: CMakeLists.txt  README.txt
nvd-demo/src/: main.c
nvd-shell/: Makefile  README.md
nvd-shell/src/: CommandLine.cpp  CommandLine.hpp  Dialogs.cpp  Dialogs.hpp  Main.cpp
pkg-config/: nvdialog.pc.in
rust/nvdialog-rs/: Cargo.toml  README.md
rust/nvdialog-rs/examples/hello-world/: Cargo.toml
rust/nvdialog-rs/examples/hello-world/src/: main.rs
rust/nvdialog-rs/src/: error.rs  functions.rs  lib.rs
scripts/: create-prebuilt.sh
src/: nvdialog_assert.h  nvdialog_capab.c  nvdialog_error.c  nvdialog_error.h  nvdialog_image.c  nvdialog_init.c  nvdialog_init.h  nvdialog_macros.h  nvdialog_main.c  nvdialog_string.c  nvdialog_util.c  nvdialog_util.h  nvdialog_version.c  nvdialog_wide_string.c
src/backend/: nvdialog_adw.c  nvdialog_adw.h  nvdialog_gtk.c  nvdialog_gtk.h  nvdialog_win32.c  nvdialog_win32.h
src/backend/adw/: nvdialog_about_dialog.c  nvdialog_adw.c  nvdialog_adw.h  nvdialog_css_manager.c  nvdialog_dialog_box.c  nvdialog_file_dialog.c  nvdialog_notification.c  nvdialog_question_dialog.c
src/backend/cocoa/: nvdialog_about_dialog.m  nvdialog_cocoa.h  nvdialog_cocoa_init.m  nvdialog_dialog_box.m  nvdialog_file_dialog.m  nvdialog_input_box.m  nvdialog_notification.m  nvdialog_question_dialog.m
src/backend/gtk/: nvdialog_about_dialog.c  nvdialog_css_manager.c  nvdialog_dialog_box.c  nvdialog_file_dialog.c  nvdialog_gtk.c  nvdialog_gtk.h  nvdialog_input_dialog.c  nvdialog_notification.c  nvdialog_question_dialog.c
src/backend/hku/: nvdialog_about_dialog.cc  nvdialog_about_dialog.cpp  nvdialog_dialog_box.cpp  nvdialog_file_dialog.cpp  nvdialog_hku.h  nvdialog_input_box.cpp  nvdialog_notification.cpp  nvdialog_question_dialog.cc  nvdialog_question_dialog.cpp
src/backend/sandbox/: nvdialog_about_dialog.c  nvdialog_css_manager.c  nvdialog_dialog_box.c  nvdialog_file_dialog.c  nvdialog_notification.c  nvdialog_question_dialog.c  nvdialog_sbx.h
src/backend/subbackend/sandboxed/: CMakeLists.txt  nvdialog_sandbox.h  nvdialog_sandboxed_file_dialog.c
src/backend/win32/: nvdialog_about_dialog.c  nvdialog_dialog_box.c  nvdialog_file_dialog.c  nvdialog_input_box.c  nvdialog_notification.c  nvdialog_question_dialog.c  nvdialog_win32.c  nvdialog_win32.h
src/core/: nvdialog_structs.c
src/impl/: nvdialog_typeimpl.h
testing/: Makefile  main.c
tests/: nvdialog_test.c  test_aboutdlg.c  test_dialogs.c  test_init.c  test_multithreading.c  test_notification.c  test_question.c
tests/nvd-flatpak/: Makefile  io.tseli0s.NvdFlatpakTest.json  nvd_flatpak_test.c
