[package]
name = "nvdialog"
homepage = "https://github.com/AndroGR/nvdialog"

author = "Aggelos Tselios <aggelostselios777@gmail.com>"
license = "MIT"

description = "Safe and lightweight bindings for libnvdialog."
version = "0.1.3"
edition = "2021"

repository = "https://github.com/AndroGR/nvdialog"
keywords   = [ "dialog", "gtk", "win32", "file-dialog" ]

[dependencies]
libloading = "0.7.3"
libc       = "0.2.132"